# Light-Tissue-Interactions-old

./: .gitignore  .gitmodules  0.900000_1.000000_0.900000_0.000000_fixed.txt  AD.cbp  AD.depend  AD.layout  ADMC.cbp  ADMC.depend  ADMC.layout  CMakeLists.txt  Doxyfile  IAD_calc_set.txt  MC.cbp  MC.depend  MC.layout  MCML.cbp  MCML.depend  MCML.layout  MC_TK.cbp  MC_TK.depend  MC_TK.layout  README.md  SETTINGS.txt  TODO  appveyor.yml  build_log.txt  main.cpp  main_ad.cpp  main_admc.cpp  main_mc.cpp  main_mcTK.cpp  main_mcml.cpp  makeoutput.txt  pvs_ADMC.sh  pvs_MC_TK.sh  pvs_Tests.sh  run_tests.sh  sonar-project.properties  test_ad.cpp  tester.cpp
AD/: ADTests.h  AddingDoubling.h  AddingDoublingNelderMead.h  AddingDoublingTests.h  Angles.h  CMakeLists.txt  DMmethod.h  DeltaMMethod.h  Eigen_NS.h  Fresnel.h  IAD.h  IADTests.h  InverseAddingDoubling.h  InverseAddingDoublingTests.h  LayerInit.h  LayerProperties.h  NelderMead.h  Quadrature.h  RT.h  RedistributionFunction.h  TestAD.h
AD_calculations_txt/: AD_input.txt  AD_true_set.txt
Heat Transfer/: HT.h
IAD/: ADmatrix.h  Adding&doubling.h  Angles.h  DMmethod.h  LayerInit.h  Quadrature.h  RandT.h  RedistributionFunction.h
Inverse/: CMakeLists.txt  FixedParam.h  Helpers.h  InverseProblem.h  NelderMead.h  StartingPoints.h
MC/: BugerLambert.h  CMakeLists.txt  Detector.h  Fresnel.h  IMC.h  InverseMonteCarlo.h  InverseMonteCarloTests.h  LightSource.h  MCTests.h  MCmultithread.h  MCmultithread.h.bak  Medium.h  Medium.h.save-failed  MonteCarlo.h  MonteCarloMultithread.h  MonteCarloTests.h  MovingSpheresTable.h  Photon.h  Sample.h  TestMC.h  input.txt
MC/Detector/: CMakeLists.txt  DetectorFactory.h  DetectorFactoryTests.h  DetectorInterface.h  DetectorInterfaceTests.h  DetectorProperties.h  DetectorType.h  DetectorTypeStrings.h  DetectorUtils.h  DetectorUtilsTests.h  FullAbsorber.h  FullAbsorberTests.h  IntegratingSphereComplex.h  IntegratingSphereComplexTests.h  IntegratingSphereSimple.h  IntegratingSphereSimpleTests.h  OpticalFiber.h  OpticalFiberTests.h
MCML/: CMakeLists.txt  DataContainer.h  Frensel.h  Photon.h  ThreadManagement.h  Tissue.h  Vector3.h
MC_TK/: BugerLambert.h  CMakeLists.txt  Fresnel.h  MCmultithread.h  Medium.h  MonteCarlo.h  MonteCarlo.h.save-failed  Photon.h  Sample.h  Sandwich.h  ThreadManagement.h  Vector3.h
Math/: Basic.h  Bresenham.h  CMakeLists.txt  Mesh3.h  Mesh3Tests.h  Random.h  RandomTests.h  Vector3.h
Minimization/: CMakeLists.txt  FixedParam.h
Output files/: A_0.010000_10.000000_0.900000.csv  A_0.010000_2.000000_0.900000.csv  A_0.024390_0.820000_0.900000.csv  A_0.500000_10.000000_0.900000.csv  A_0.500000_2.000000_0.900000.csv  A_0.830000_0.600000_0.000000.csv  A_0.830000_0.600000_0.900000.csv  A_0.900000_1.000000_0.900000.csv  (+145 more)
Physics/: Angles.cpp  Angles.h  AnglesTests.h  BugerLambert.cpp  BugerLambert.h  BugerLambertTests.h  CMakeLists.txt  Layer.h  LayerTests.h  MediumGlass.h  MediumInterface.h  Reflectance.cpp  Reflectance.h  ReflectanceTests.h  Specimen.h  SpecimenTests.h
Physics/Medium/: CMakeLists.txt  MediumArbitrary.h  MediumArbitraryTests.h  MediumConstant.h  MediumConstantTests.h  MediumFactory.h  MediumFactoryTests.h  MediumGlass.h  MediumGlassTests.h  MediumInterface.h  MediumInterfaceTests.h  MediumLinear.h  MediumLinearTests.h  MediumProperties.h  MediumType.h  MediumTypeStrings.h  MediumUtils.h  MediumUtilsTests.h
Settings/: CMakeLists.txt  SettingsExporter.h  SettingsExporterHelpers.h  SettingsExporterLayer.h  SettingsExporterLayerTests.h  SettingsExporterMedium.h  SettingsExporterMediumTests.h  SettingsExporterSampleTests.h  SettingsImporter.h  SettingsImporterErrors.h  SettingsImporterErrorsTests.h  SettingsImporterHelpers.h  SettingsImporterLayer.h  SettingsImporterLayerTests.h  SettingsImporterMedium.h  SettingsImporterMediumTests.h  SettingsImporterMediumType.h  SettingsImporterMediumTypeTests.h  SettingsImporterSampleTests.h  SettingsImporterStrings.h  SettingsImporterTissueType.h  SettingsImporterTissueTypeTests.h  SettingsStrings.h  settings.yaml
Tests/: ADTests.cpp  AddingDoublingTests.cpp  AnglesTests  AnglesTests.cpp  BenchmarkHelper.h  BugerLambertTests  BugerLambertTests.cpp  BugerTest.h  CMakeLists.txt  ContractsTests.cpp  DetectorFactoryTests.cpp  DetectorInterfaceTests.cpp  DetectorUtilsTests.cpp  FullAbsorberTests.cpp  IADTests.cpp  IntegratingSphereComplexTests.cpp  IntegratingSphereSimpleTests.cpp  InverseAddingDoublingTests.cpp  InverseMonteCarloTests.cpp  LayerTests.cpp  MCTests.cpp  MediumArbitraryTests  MediumArbitraryTests.cpp  MediumConstantTests  MediumConstantTests.cpp  MediumFactoryTests  MediumFactoryTests.cpp  MediumGlassTests  MediumGlassTests.cpp  MediumInterfaceTests  MediumInterfaceTests.cpp  MediumLinearTests  MediumLinearTests.cpp  MediumUtilsTests  MediumUtilsTests.cpp  Mesh3Tests  Mesh3Tests.cpp  MonteCarloTests.cpp  OpticalFiberTests.cpp  RandomTests.cpp  (+29 more)
Tests/IMC Test Data/: Rd_0.000000_0.100000_0.000000_glass.txt  Rd_0.300000_10.000000_0.000000.txt  Rd_0.300000_10.000000_0.000000_glass.txt  Rd_0.800000_0.100000_0.500000.txt  Rd_0.800000_0.100000_0.500000_glass.txt  Rd_0.900000_1.000000_0.900000.txt  Rd_0.900000_1.000000_0.900000_glass.txt  Rd_0.990000_10.000000_0.900000.txt  Rd_0.990000_10.000000_0.900000_glass.txt  Tc_0.000000_0.100000_0.000000.txt  Tc_0.000000_0.100000_0.000000_glass.txt  Tc_0.000000_1.000000_0.000000_glass.txt  Tc_0.000000_10.000000_0.000000.txt  Tc_0.300000_10.000000_0.000000_glass.txt  Tc_0.990000_10.000000_0.900000.txt  Tc_0.990000_10.000000_0.900000_glass.txt  Td_0.000000_0.100000_0.000000.txt  Td_0.000000_0.100000_0.000000_glass.txt  Td_0.000000_1.000000_0.000000.txt  Td_0.000000_1.000000_0.000000_glass.txt  Td_0.000000_10.000000_0.000000.txt  Td_0.000000_10.000000_0.000000_glass.txt  Td_0.300000_10.000000_0.000000.txt  Td_0.300000_10.000000_0.000000_glass.txt  Td_0.800000_0.100000_0.500000.txt  Td_0.800000_0.100000_0.500000_glass.txt  Td_0.900000_1.000000_0.900000.txt  Td_0.900000_1.000000_0.900000_glass.txt  Td_0.990000_10.000000_0.900000.txt  Td_0.990000_10.000000_0.900000_glass.txt
Utils/: Time.h  (+9 more)
(+97 files in other folders)
