add_library(AddingDoubling.h INTERFACE)
add_library(DMmethod.h INTERFACE)
add_library(IAD.h INTERFACE)
add_library(LayerInit.h INTERFACE)
add_library(NelderMead.h INTERFACE)
add_library(Quadrature.h INTERFACE)
add_library(RedistributionFunction.h INTERFACE)
add_library(RT.h INTERFACE)

add_library(TestAD.h INTERFACE)
add_library(TestIAD.h INTERFACE)
