add_library(Angles.h INTERFACE)
add_library(BugerLambert.h INTERFACE)
add_library(Layer.h INTERFACE)
add_library(Reflectance.h INTERFACE)
add_library(Specimen.h INTERFACE)

add_library(AnglesTests.h INTERFACE)
add_library(BugerLambertTests.h INTERFACE)
add_library(LayerTests.h INTERFACE)
add_library(ReflectanceTests.h INTERFACE)
add_library(SpecimenTests.h INTERFACE)

add_subdirectory(Medium)
