add_library(SettingsImporter.h INTERFACE)
add_library(SettingsImporterErrors.h INTERFACE)
add_library(SettingsImporterStrings.h INTERFACE)
add_library(SettingsImporterTissueType.h INTERFACE)

add_library(SettingsImporterErrorsTests.h INTERFACE)
add_library(SettingsImporterTissueTypeTests.h INTERFACE)

