add_library(SettingsExporterHelpers.h INTERFACE)
add_library(SettingsExporterLayer.h INTERFACE)
add_library(SettingsExporterMedium.h INTERFACE)
add_library(SettingsExporterSample.h INTERFACE)
add_library(SettingsImporterErrors.h INTERFACE)
add_library(SettingsImporterHelpers.h INTERFACE)
add_library(SettingsImporterMedium.h INTERFACE)
add_library(SettingsStrings.h INTERFACE)

add_library(SettingsExporterLayerTests.h INTERFACE)
add_library(SettingsExporterMediumTests.h INTERFACE)
add_library(SettingsExporterSampleTests.h INTERFACE)
add_library(SettingsImporterErrorsTests.h INTERFACE)
add_library(SettingsImporterMediumTests.h INTERFACE)
