add_library(DetectorInterface.h INTERFACE)
add_library(DetectorProperties.h INTERFACE)
add_library(DetectorType.h INTERFACE)
add_library(DetectorUtils.h INTERFACE)
add_library(DistancesSweep.h INTERFACE)
add_library(FullAbsorber.h INTERFACE)
add_library(IntegratingSphereComplex.h INTERFACE)
add_library(IntegratingSphereSimple.h INTERFACE)
add_library(OpticalFiber.h INTERFACE)

add_library(DetectorInterfaceTests.h INTERFACE)
add_library(DetectorUtilsTests.h INTERFACE)
add_library(FullAbsorberTests.h INTERFACE)
add_library(IntegratingSphereComplexTests.h INTERFACE)
add_library(IntegratingSphereSimpleTests.h INTERFACE)
add_library(OpticalFiberTests.h INTERFACE)
