add_library(MediumConstant.h INTERFACE)
add_library(MediumGlass.h INTERFACE)
add_library(MediumInterface.h INTERFACE)
add_library(MediumLinear.h INTERFACE)
add_library(MediumProperties.h INTERFACE)
add_library(MediumType.h INTERFACE)
add_library(MediumUtils.h INTERFACE)

add_library(MediumConstantTests.h INTERFACE)
add_library(MediumGlassTests.h INTERFACE)
add_library(MediumInterfaceTests.h INTERFACE)
add_library(MediumLinearTests.h INTERFACE)
add_library(MediumUtilsTests.h INTERFACE)

